<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/register_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/signUpFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title"
        android:ems="10"
        android:hint="@string/register_first_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/signUpLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/signUpFirstName"
        android:ems="10"
        android:hint="@string/register_last_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/signUpUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/signUpLastName"
        android:ems="10"
        android:hint="@string/register_username_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/signUpUsername"
        android:ems="10"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/signUpMedicalNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/signUpPassword"
        android:ems="10"
        android:hint="@string/register_medical_number_hint"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/radioGroupUserType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/signUpMedicalNumber" >

        <RadioButton
            android:id="@+id/signUpTeenType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/register_radio_teen" />

        <RadioButton
            android:id="@+id/signUpFollowerType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_radio_follower" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/signUpAllowFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioGroupUserType"
        android:text="@string/register_allow_followers" />

    <Button
        android:id="@+id/signUpSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/signUpAllowFollowers"
        android:text="@string/register_ok_button" />

</RelativeLayout>
